<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/user_id_tv"
        android:layout_width="273dp"
        android:layout_height="43dp"
        android:layout_marginStart="69dp"
        android:textAlignment="center"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"

        android:hint="TC Kimlik Numarası"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/user_password_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/user_password_tv"
        android:layout_width="273dp"
        android:layout_height="43dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:paddingStart="105dp"
        android:hint="  Şifre"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="273dp"
        android:layout_height="43dp"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"

        android:layout_marginEnd="65dp"
        android:layout_marginBottom="204dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/forget_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginStart="125dp"

        android:layout_marginTop="112dp"
        android:layout_marginEnd="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_container_shape" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ping" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="192dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/welcome"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>