<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_page_color"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="315dp"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="315dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/card_rv"
        android:layout_width="327dp"
        android:layout_height="206dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_1"
        android:layout_width="327dp"
        android:layout_height="206dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="42dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="171dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="17dp"
                android:text="@string/debt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/pay_off_debt_button" />

            <ImageButton
                android:id="@+id/send_money_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="119dp"
                android:layout_marginBottom="9dp"
                android:background="@drawable/ring_shape"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/send" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/send_money"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/pay_off_debt_button"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/pay_off_debt_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ring_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toEndOf="@+id/send_money_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.825"
                app:srcCompat="@drawable/pay_off" />

            <TextView
                android:id="@+id/textView16"
                style="@style/header_black_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="267dp"
                android:text="IBAN:"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iban_num_tv"
                style="@style/header_2_black_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="115dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="152dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                style="@style/header_black_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="252dp"
                android:text="Bakiye"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iban_num_tv" />

            <TextView
                android:id="@+id/balance_tv_main"
                style="@style/header_2_black_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="212dp"
                android:layout_marginBottom="37dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@+id/send_money_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView6"
        style="@style/header_black_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="318dp"
        android:text="Hesabım"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_name_tv" />

    <TextView
        android:id="@+id/textView7"
        style="@style/header_black_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="313dp"
        android:text="Kartlarım"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/atm_button"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/button_shape"
        android:text="@string/atm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_rv" />


</androidx.constraintlayout.widget.ConstraintLayout>